adding authorizers for authenticated apis

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ cognito-info
 cognito-info.zip
 github-login
 github-login.zip
+cognito-login
+cognito-login.zip
+cognito-userInfo
+cognito-userInfo.zip
